# Projet-Python-Turtlebot-Cormoran

./: Code_de_base_GUI.py  README.md  gui_main.py  hello_world.py  interface_commande_robot.py  interface_commande_robot_test.py  pyproject.toml  requirements.txt  setup.py  test.py  testfile.py  turtlebot3
docs/: LICENSE  README.md  docs.txt  requirements.txt
python1/: juste un test pour voir si ça marche.txt
robot_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: Gazebo_launch.py  READ.py  command_frame.py  connection_frame.py  example.py  main.py  movement_frame.py  req.py  req.txt  robot_controler.py  robot_controller.py  testfile.py
tests/: test_Gazebo_launch.py  test_command_frame.py  test_movement_frame.py  test_robot_controller.py  tests.py
turtlebot_controller.egg-info/: PKG-INFO  SOURCES.txt
