[project]
name = "Projet-Python-Turtlebot-Cormoran"
version = "0.1.0"
description = "Un GUI pour simulation sur Gazebo"
authors = [{ name = ["Pierre Peaupardin","Thibaut Barottin","Vlad Tondeur","Nicolas Notter"], email = null }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["tkinter","matplotlib"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest >= 8.1.1"]

[project.scripts]
